# src/modules/user/modelUser.js
@@ -1,27 +1,27 @@
-import mongoose from "mongoose";
+// import mongoose from "mongoose";
 
-const userSchema = new mongoose.Schema(
-    {
-        email: {
-            type: String,
-            required: true,
-            unique: true,
-        },
-        password: {
-            type: String,
-            required: true,
-        },
-        name: {
-            type: String,
-            required: true,
-        },
-    },
-    {
-        versionKey: false,
-        timestamps: true,
-    }
-);
+// const userSchema = new mongoose.Schema(
+//     {
+//         email: {
+//             type: String,
+//             required: true,
+//             unique: true,
+//         },
+//         password: {
+//             type: String,
+//             required: true,
+//         },
+//         name: {
+//             type: String,
+//             required: true,
+//         },
+//     },
+//     {
+//         versionKey: false,
+//         timestamps: true,
+//     }
+// );
 
-// Sử dụng lại model nếu đã được tạo
-const user = mongoose.models.user || mongoose.model("user", userSchema);
-export default user;
+// // Sử dụng lại model nếu đã được tạo
+// const user = mongoose.models.user || mongoose.model("user", userSchema);
+// export default user;
